[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/Player_Lobo.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Enemigo_Lobo.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Main_Lobo.gd" type="Script" id=3]
[ext_resource path="res://assets/img/Fondos/fondo_marino.png" type="Texture" id=4]
[ext_resource path="res://assets/img/Fondos/sea.png" type="Texture" id=5]
[ext_resource path="res://assets/img/Fondos/algas.png" type="Texture" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, -8, 0, 0, 0, 0, 1024, 0, 0, 0, 0, 0, 1024, 600, 0, 0, 0, 0, 0, 600, 0, 0, 0, 0, 0, -8, 0, 0, 0, 0, 0, -8, 0, 0, 0, 0, 1024, 0, 0, 0, 0, 0, 1016, 592, 0, 0, 0, 0, 1024, 600, 0, 0, 0, 0, -8, 600, 0, 0, 0, 0, 0, 600, 0, 0, 0, 0, -8, -8, 0, 0, 0, 0, -8, -8 )
}

[node name="Main" type="Node2D"]
script = ExtResource( 3 )
fish_scene = ExtResource( 2 )

[node name="Sea" type="Sprite" parent="."]
position = Vector2( 512, 160 )
scale = Vector2( 0.748, 0.48 )
texture = ExtResource( 5 )

[node name="FondoMarino" type="Sprite" parent="."]
position = Vector2( 576, 488 )
scale = Vector2( 0.412, 0.348 )
texture = ExtResource( 4 )

[node name="Algas" type="Sprite" parent="."]
position = Vector2( 992, 528 )
scale = Vector2( 0.0906918, 0.068696 )
texture = ExtResource( 6 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 248, 480 )

[node name="FishTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ScoreTimer" type="Timer" parent="."]
one_shot = true

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 250, 450 )

[node name="FishPath" type="Path2D" parent="."]
position = Vector2( 8, 8 )
curve = SubResource( 1 )

[node name="FishSpawnLocation" type="PathFollow2D" parent="FishPath"]
position = Vector2( 0, -8 )
rotation = 0.00781252

[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
